--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -1,5 +1,7 @@
 name: K6 load test
 on: [push]
+permissions:
+  contents: write
 jobs:
   build:
     name: K6 load test
@@ -19,3 +21,11 @@ jobs:
         with:
           name: relatório de testes de performance
           path: report
+
+      - name: Publis report
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publis_branch: master
+          publish_dir: report
+
